Added Magic Link (Passwordless Login) for customer authentication (#353)

--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -20,6 +20,7 @@
 "All","All"
 "All countries","All countries"
 "ALL GROUPS","ALL GROUPS"
+"Allow customers to login via a secure link sent to their email instead of using a password.","Allow customers to login via a secure link sent to their email instead of using a password."
 "All Store Views","All Store Views"
 "Already registered?","Already registered?"
 "Always optional.","Always optional."
@@ -70,6 +71,7 @@
 "Contact Information","Contact Information"
 "Continue","Continue"
 "Continue Shopping","Continue Shopping"
+"Controls whether password is required during registration.","Controls whether password is required during registration."
 "Country","Country"
 "Create","Create"
 "Create an Account","Create an Account"
@@ -142,10 +144,12 @@
 "Email Address","Email Address"
 "Email Link to Set Password","Email Link to Set Password"
 "Email Link to Set Password on New Account","Email Link to Set Password on New Account"
+"Email Link to Set Password Options","Email Link to Set Password Options"
 "Email Sender","Email Sender"
 "Email Template","Email Template"
 "Enable ""Remember Me""","Enable ""Remember Me"""
 "Enable Automatic Assignment to Customer Group","Enable Automatic Assignment to Customer Group"
+"Enable Magic Link Login","Enable Magic Link Login"
 "Excel XML","Excel XML"
 "Failed to confirm customer account.","Failed to confirm customer account."
 "Fax","Fax"
@@ -173,8 +177,10 @@
 "Group Name","Group Name"
 "Guest","Guest"
 "Hello, %s!","Hello, %s!"
+"How long the magic link remains valid. Default: 10 minutes.","How long the magic link remains valid. Default: 10 minutes."
 "HTML","HTML"
 "ID","ID"
+"If there is an account associated with %s you will receive an email with a login link.","If there is an account associated with %s you will receive an email with a login link."
 "If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation"
 "If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation"
 "If you believe this is an error, please contact us at %s","If you believe this is an error, please contact us at %s"
@@ -186,7 +192,9 @@
 "Invalid customer data","Invalid customer data"
 "Invalid email address ""%s"".","Invalid email address ""%s""."
 "Invalid email address.","Invalid email address."
+"Invalid login link.","Invalid login link."
 "Invalid login or password.","Invalid login or password."
+"Invalid or expired login link.","Invalid or expired login link."
 "Invalid password reset customer Id.","Invalid password reset customer Id."
 "Invalid password reset token.","Invalid password reset token."
 "Invalid shipping address for (%s)","Invalid shipping address for (%s)"
@@ -208,11 +216,17 @@
 "Login Information","Login Information"
 "Login Options","Login Options"
 "Login or Create an Account","Login or Create an Account"
+"Login with Magic Link","Login with Magic Link"
 "Logout","Logout"
 "Log Out","Log Out"
+"Magic Link (Passwordless Login) Options","Magic Link (Passwordless Login) Options"
+"Magic Link Email Template","Magic Link Email Template"
+"Magic Link Login","Magic Link Login"
 "Manage Addresses","Manage Addresses"
 "Manage Customers","Manage Customers"
 "Maximum length must be less then %s symbols","Maximum length must be less than %s symbols"
+"Maximum magic link requests per email address per hour. Default: 3.","Maximum magic link requests per email address per hour. Default: 3."
+"Maximum magic link requests per IP address per hour. Default: 10.","Maximum magic link requests per IP address per hour. Default: 10."
 "Middle Name","Middle Name"
 "Minimum admin password length","Minimum admin password length"
 "Minimum password length","Minimum password length"
@@ -257,6 +271,7 @@
 "No Items Found","No Items Found"
 "No item specified.","No item specified."
 "No Newsletter Found","No Newsletter Found"
+"No Password (Full Passwordless)","No Password (Full Passwordless)"
 "Not confirmed, can login","Not confirmed, can login"
 "Not confirmed, cannot login","Not confirmed, cannot login"
 "Not Sent","Not Sent"
@@ -313,6 +328,8 @@
 "Purchased On","Purchased On"
 "Purchase On","Purchase On"
 "Qty","Qty"
+"Rate Limit - Email (requests per hour)","Rate Limit - Email (requests per hour)"
+"Rate Limit - IP (requests per hour)","Rate Limit - IP (requests per hour)"
 "Recent Orders","Recent Orders"
 "Records for %s store found.","Records for %s store found."
 "Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)"
@@ -321,6 +338,9 @@
 "Register","Register"
 "Register and Checkout","Register and Checkout"
 "Registered Customers","Registered Customers"
+"Registration Form","Registration Form"
+"Registration Password Requirement","Registration Password Requirement"
+"Registration successful, but we could not send the login link. Please use the login page.","Registration successful, but we could not send the login link. Please use the login page."
 "Remember Me","Remember Me"
 "Remind Email Template","Remind Email Template"
 "Remind Password","Remind Password"
@@ -328,6 +348,7 @@
 "Remove address","Remove address"
 "Require admin user to change user password","Require admin user to change user password"
 "Require Emails Confirmation","Require Emails Confirmation"
+"Require Password (Default)","Require Password (Default)"
 "Reset a Password","Reset a Password"
 "Retrieve address data","Retrieve address data"
 "Retrieve address info","Retrieve address info"
@@ -390,6 +411,7 @@
 "Telephone","Telephone"
 "Text","Text"
 "Text One Line","Text One Line"
+"Thank you for registering! We have sent you an email with a login link to %s.","Thank you for registering! We have sent you an email with a login link to %s."
 "Thank you for registering with %s.","Thank you for registering with %s."
 "The account information has been saved.","The account information has been saved."
 "The address does not belong to this customer.","The address does not belong to this customer."
@@ -419,6 +441,7 @@
 "The VAT ID entered (%s) is not a valid VAT ID.","The VAT ID entered (%s) is not a valid VAT ID."
 "The VAT ID entered (%s) is not a valid VAT ID. The customer would belong to Customer Group %s.","The VAT ID entered (%s) is not a valid VAT ID. The customer would belong to Customer Group %s."
 "The VAT ID is valid. The current Customer Group will be used.","The VAT ID is valid. The current Customer Group will be used."
+"This account is not active.","This account is not active."
 "This account is not confirmed.","This account is not confirmed."
 "This account is not confirmed. <a href=""%s"">Click here</a> to resend confirmation email.","This account is not confirmed. <a href=""%s"">Click here</a> to resend confirmation email."
 "This customer email already exists","This customer email already exists"
@@ -427,6 +450,7 @@
 "This email is sent on checkbox <em>Email Link to Set Password</em> is checked on the customer page in backend.","This email is sent on checkbox <em>Email Link to Set Password</em> is checked on the customer page in backend."
 "This email will be sent instead of default welcome email, after account confirmation.","This email will be sent instead of default welcome email, after account confirmation."
 "This email with a link to set password is sent on new account creation in backend.","This email with a link to set password is sent on new account creation in backend."
+"Token Expiration (minutes)","Token Expiration (minutes)"
 "To show VAT number on frontend, set Show VAT Number on Frontend option to Yes.","To show VAT number on frontend, set Show VAT Number on Frontend option to Yes."
 "Total","Total"
 "Type","Type"
@@ -466,6 +490,9 @@
 "You are currently subscribed to 'General Subscription'.","You are currently subscribed to 'General Subscription'."
 "You are currently subscribed to our newsletter.","You are currently subscribed to our newsletter."
 "You are now logged out","You are now logged out"
+"You have been successfully logged in.","You have been successfully logged in."
+"You have exceeded magic link requests per hour from this email address.","You have exceeded magic link requests per hour from this email address."
+"You have exceeded magic link requests per hour from this IP address.","You have exceeded magic link requests per hour from this IP address."
 "You have exceeded requests to times per 24 hours from 1 e-mail.","You have exceeded requests to times per 24 hours from 1 e-mail."
 "You have exceeded requests to times per hour from 1 IP.","You have exceeded requests to times per hour from 1 IP."
 "You have logged out and will be redirected to our homepage in 5 seconds.","You have logged out and will be redirected to our homepage in 5 seconds."
@@ -475,6 +502,7 @@
 "You have not set a default billing address.","You have not set a default billing address."
 "You have not set a default shipping address.","You have not set a default shipping address."
 "Your account balance is: %s","Your account balance is: %s"
+"Your login link has expired. Please request a new one.","Your login link has expired. Please request a new one."
 "Your Tax ID cannot be validated.","Your Tax ID cannot be validated."
 "Your VAT ID was successfully validated.","Your VAT ID was successfully validated."
 "You will be charged tax.","You will be charged tax."
