--- a/app/locale/en_US/Maho_CatalogLinkRule.csv
+++ b/app/locale/en_US/Maho_CatalogLinkRule.csv
@@ -34,9 +34,8 @@
 "New Rule","New Rule"
 "Oldest First","Oldest First"
 "Please select rule(s).","Please select rule(s)."
-"Position (Default)","Position (Default)"
 "Price: High to Low","Price: High to Low"
-"Price: Low to High","Price: Low to High"
+"Price: Low to High (Default)","Price: Low to High (Default)"
 "Priority","Priority"
 "Product Attribute","Product Attribute"
 "Product Link Rules","Product Link Rules"
