--- a/app/locale/en_US/Maho_CatalogLinkRule.csv
+++ b/app/locale/en_US/Maho_CatalogLinkRule.csv
@@ -1,6 +1,7 @@
 "Action","Action"
 "Active","Active"
 "Add New Rule","Add New Rule"
+"Apply rule to source products matching the following conditions (leave blank for all products)","Apply rule to source products matching the following conditions (leave blank for all products)"
 "Are you sure?","Are you sure?"
 "Catalog","Catalog"
 "Change status","Change status"
@@ -20,6 +21,7 @@
 "From Date","From Date"
 "ID","ID"
 "Inactive","Inactive"
+"Link to target products matching the following conditions (leave blank for all products)","Link to target products matching the following conditions (leave blank for all products)"
 "Link Type","Link Type"
 "Lower number = higher priority","Lower number = higher priority"
 "matches source","matches source"
@@ -46,10 +48,12 @@
 "Save Rule","Save Rule"
 "Sort Order","Sort Order"
 "Source Product Conditions","Source Product Conditions"
+"Source products matching %s of these conditions are %s:","Source products matching %s of these conditions are %s:"
 "Status","Status"
 "Target Conditions","Target Conditions"
 "Target product attribute will be compared to source product","Target product attribute will be compared to source product"
 "Target Product Conditions","Target Product Conditions"
+"Target products matching %s of these conditions are %s:","Target products matching %s of these conditions are %s:"
 "The rule has been deleted.","The rule has been deleted."
 "The rule has been saved.","The rule has been saved."
 "This rule no longer exists.","This rule no longer exists."
