--- a/app/locale/en_US/Maho_CatalogLinkRule.csv
+++ b/app/locale/en_US/Maho_CatalogLinkRule.csv
@@ -24,6 +24,7 @@
 "Link to target products matching the following conditions (leave blank for all products)","Link to target products matching the following conditions (leave blank for all products)"
 "Link Type","Link Type"
 "Lower number = higher priority","Lower number = higher priority"
+"Manage Rules","Manage Rules"
 "matches source","matches source"
 "Match Source Product","Match Source Product"
 "Maximum Links","Maximum Links"
