--- a/app/locale/en_US/Maho_CatalogLinkRule.csv
+++ b/app/locale/en_US/Maho_CatalogLinkRule.csv
@@ -36,12 +36,12 @@
 "Oldest First","Oldest First"
 "Please select rule(s).","Please select rule(s)."
 "Price: High to Low","Price: High to Low"
-"Price: Low to High (Default)","Price: Low to High (Default)"
+"Price: Low to High","Price: Low to High"
 "Priority","Priority"
 "Product Attribute","Product Attribute"
 "Product Link Rules","Product Link Rules"
 "Product Relationship Rules","Product Relationship Rules"
-"Random","Random"
+"Random (Default)","Random (Default)"
 "Related Products","Related Products"
 "Rule Information","Rule Information"
 "Rule Name","Rule Name"
