--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -29,7 +29,7 @@
 "Back to Select Addresses","Back to Select Addresses"
 "Back to Shipping Information","Back to Shipping Information"
 "Back to Shopping Cart","Back to Shopping Cart"
-"Based on your selection, you may be interested in the following items:","Based on your selection, you may be interested in the following items:"
+"You may be interested in the following items","You may be interested in the following items"
 "Billing Address","Billing Address"
 "Billing Information","Billing Information"
 "Billing Information - %s","Billing Information - %s"
