--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -241,7 +241,7 @@
 "Quote Lifetime (days)","Quote Lifetime (days)"
 "Recently added item(s)","Recently added item(s)"
 "Register","Register"
-"Register to Create an Account","Register to Create an Account"
+"Register to create an account","Register to create an account"
 "Remove","Remove"
 "Remove coupon code from shopping cart","Remove coupon code from shopping cart"
 "Remove Item","Remove Item"
