--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -74,7 +74,7 @@
 "Controls whether password is required during registration.","Controls whether password is required during registration."
 "Country","Country"
 "Create","Create"
-"Create an Account","Create an Account"
+"Create an account","Create an account"
 "Create customer","Create customer"
 "Create customer address","Create customer address"
 "Create New Account Options","Create New Account Options"
@@ -184,7 +184,6 @@
 "If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation"
 "If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation"
 "If you believe this is an error, please contact us at %s","If you believe this is an error, please contact us at %s"
-"If you have an account with us, please log in.","If you have an account with us, please log in."
 "Invalid attribute option specified for attribute %s (%s), skipping the record.","Invalid attribute option specified for attribute %s (%s), skipping the record."
 "Invalid attribute set specified, skipping the record.","Invalid attribute set specified, skipping the record."
 "Invalid billing address for (%s)","Invalid billing address for (%s)"
@@ -215,7 +214,6 @@
 "Login Form","Login Form"
 "Login Information","Login Information"
 "Login Options","Login Options"
-"Login or Create an Account","Login or Create an Account"
 "Login with Magic Link","Login with Magic Link"
 "Logout","Logout"
 "Log Out","Log Out"
@@ -311,7 +309,6 @@
 "Please enter the telephone number.","Please enter the telephone number."
 "Please enter the zip/postal code.","Please enter the zip/postal code."
 "Please enter your email.","Please enter your email."
-"Please enter your email address below. You will receive a link to reset your password.","Please enter your email address below. You will receive a link to reset your password."
 "Please enter your email below and we'll send you confirmation link for it.","Please enter your email below and we'll send you confirmation link for it."
 "Please make sure your passwords match.","Please make sure your passwords match."
 "Please select","Please select"
