--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -71,7 +71,7 @@
 "Contact Information","Contact Information"
 "Continue","Continue"
 "Continue Shopping","Continue Shopping"
-"Controls whether password is required during registration.","Controls whether password is required during registration."
+"Controls whether password is required during registration when Magic Link is enabled.","Controls whether password is required during registration when Magic Link is enabled."
 "Country","Country"
 "Create","Create"
 "Create an account","Create an account"
@@ -217,9 +217,13 @@
 "Login with Magic Link","Login with Magic Link"
 "Logout","Logout"
 "Log Out","Log Out"
-"Magic Link (Passwordless Login) Options","Magic Link (Passwordless Login) Options"
+"Magic Link Email Sender","Magic Link Email Sender"
 "Magic Link Email Template","Magic Link Email Template"
 "Magic Link Login","Magic Link Login"
+"Magic Link Rate Limit - Email (requests per hour)","Magic Link Rate Limit - Email (requests per hour)"
+"Magic Link Rate Limit - IP (requests per hour)","Magic Link Rate Limit - IP (requests per hour)"
+"Magic Link Registration Password Requirement","Magic Link Registration Password Requirement"
+"Magic Link Token Expiration (minutes)","Magic Link Token Expiration (minutes)"
 "Manage Addresses","Manage Addresses"
 "Manage Customers","Manage Customers"
 "Maximum length must be less then %s symbols","Maximum length must be less than %s symbols"
@@ -325,8 +329,6 @@
 "Purchased On","Purchased On"
 "Purchase On","Purchase On"
 "Qty","Qty"
-"Rate Limit - Email (requests per hour)","Rate Limit - Email (requests per hour)"
-"Rate Limit - IP (requests per hour)","Rate Limit - IP (requests per hour)"
 "Recent Orders","Recent Orders"
 "Records for %s store found.","Records for %s store found."
 "Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)"
@@ -334,9 +336,7 @@
 "Refunded","Refunded"
 "Register","Register"
 "Register and Checkout","Register and Checkout"
-"Registered Customers","Registered Customers"
 "Registration Form","Registration Form"
-"Registration Password Requirement","Registration Password Requirement"
 "Registration successful, but we could not send the login link. Please use the login page.","Registration successful, but we could not send the login link. Please use the login page."
 "Remember Me","Remember Me"
 "Remind Email Template","Remind Email Template"
@@ -447,7 +447,6 @@
 "This email is sent on checkbox <em>Email Link to Set Password</em> is checked on the customer page in backend.","This email is sent on checkbox <em>Email Link to Set Password</em> is checked on the customer page in backend."
 "This email will be sent instead of default welcome email, after account confirmation.","This email will be sent instead of default welcome email, after account confirmation."
 "This email with a link to set password is sent on new account creation in backend.","This email with a link to set password is sent on new account creation in backend."
-"Token Expiration (minutes)","Token Expiration (minutes)"
 "To show VAT number on frontend, set Show VAT Number on Frontend option to Yes.","To show VAT number on frontend, set Show VAT Number on Frontend option to Yes."
 "Total","Total"
 "Type","Type"
