--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -37,7 +37,6 @@
 "Assign a Customer Group","Assign a Customer Group"
 "Average Sale","Average Sale"
 "Back","Back"
-"Back to Login","Back to Login"
 "Bad request.","Bad request."
 "Based on the VAT ID, the customer would belong to the Customer Group %s.","Based on the VAT ID, the customer would belong to the Customer Group %s."
 "Bill to Name","Bill to Name"
@@ -355,7 +354,7 @@
 "Retrieve customer info","Retrieve customer info"
 "Retrieve customers","Retrieve customers"
 "Retrieve your confirmation link here","Retrieve your confirmation link here"
-"Retrieve your password here","Retrieve your password here"
+"Retrieve your password","Retrieve your password"
 "Sales Statistics","Sales Statistics"
 "Save","Save"
 "Save Address","Save Address"
