--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -1,4 +1,5 @@
 """Per Order"" allows single handling fee for entire order. ""Per Package"" allows individual  handling fee for each package.","""Per Order"" allows single handling fee for entire order. ""Per Package"" allows individual  handling fee for each package."
+"-- Please Select --","-- Please Select --"
 "1 Day Freight","1 Day Freight"
 "2 Day","2 Day"
 "2 Day AM","2 Day AM"
@@ -9,14 +10,17 @@
 "2nd Day Air Letter","2nd Day Air Letter"
 "3 Day Freight","3 Day Freight"
 "3 Day Select","3 Day Select"
+"5-digit ZIP code where permit was issued (required for PERMIT account type only)","5-digit ZIP code where permit was issued (required for PERMIT account type only)"
 "Access ID","Access ID"
 "Account ID","Account ID"
+"Account Number","Account Number"
 "Account Number","Account Number"
 "Adult","Adult"
 "Adult Signature Required","Adult Signature Required"
 "Allowed Methods","Allowed Methods"
 "Allows breaking total order weight into smaller pieces if it exeeds %s %s to ensure accurate calculation of shipping charges.","Allows breaking total order weight into smaller pieces if it exeeds %s %s to ensure accurate calculation of shipping charges."
 "Allows breaking total order weight into smaller pieces if it exeeds 70 kg to ensure accurate calculation of shipping charges.","Allows breaking total order weight into smaller pieces if it exeeds 70 kg to ensure accurate calculation of shipping charges."
+"API Environment","API Environment"
 "Authentication error","Authentication error"
 "Break bulk economy","Break bulk economy"
 "Break bulk express","Break bulk express"
@@ -34,6 +38,7 @@
 "Container","Container"
 "Content Type","Content Type"
 "Customer Packaging","Customer Packaging"
+"Customer Registration ID (CRID)","Customer Registration ID (CRID)"
 "Customer services","Customer services"
 "Customer Supplied Package","Customer Supplied Package"
 "Debug","Debug"
@@ -58,6 +63,7 @@
 "Enable Negotiated Rates","Enable Negotiated Rates"
 "Enables/Disables SSL verification of Maho server by UPS.","Enables/Disables SSL verification of Maho server by UPS."
 "Enable SSL Verification","Enable SSL Verification"
+"EPS (Enterprise Payment System)","EPS (Enterprise Payment System)"
 "Error #%s : %s","Error #%s : %s"
 "Error reading response from UPS","Error reading response from UPS"
 "Europack","Europack"
@@ -136,6 +142,7 @@
 "Library Mail Parcel","Library Mail Parcel"
 "Live","Live"
 "Machinable","Machinable"
+"Mailer ID (MID)","Mailer ID (MID)"
 "Maximum Package Weight (Please consult your shipping carrier for maximum supported shipping weight)","Maximum Package Weight (Please consult your shipping carrier for maximum supported shipping weight)"
 "Media Mail Parcel","Media Mail Parcel"
 "Medical express","Medical express"
@@ -160,6 +167,7 @@
 "Non documents","Non documents"
 "None","None"
 "No packages for request","No packages for request"
+"No rates available","No rates available"
 "Not Required","Not Required"
 "Order","Order"
 "Order #%s","Order #%s"
@@ -173,6 +181,10 @@
 "Pallet","Pallet"
 "Parcel","Parcel"
 "Password","Password"
+"Payment Account Settings","Payment Account Settings"
+"Payment Account Type","Payment Account Type"
+"PERMIT","PERMIT"
+"Permit ZIP Code","Permit ZIP Code"
 "Pickup Method","Pickup Method"
 "Please, specify origin country","Please, specify origin country"
 "Please make sure to use only digits here. No dashes are allowed.","Please make sure to use only digits here. No dashes are allowed."
@@ -233,7 +245,9 @@
 "Priority Mail Window Flat Rate Envelope","Priority Mail Window Flat Rate Envelope"
 "Priority Mail Window Flat Rate Envelope Hold For Pickup","Priority Mail Window Flat Rate Envelope Hold For Pickup"
 "Priority Overnight","Priority Overnight"
+"Production","Production"
 "Rectangular","Rectangular"
+"Register your application at developers.usps.com to obtain OAuth credentials. Use the same credentials for both test and production environments.","Register your application at developers.usps.com to obtain OAuth credentials. Use the same credentials for both test and production environments."
 "Regular","Regular"
 "Regular Pickup","Regular Pickup"
 "Request Courier","Request Courier"
@@ -266,6 +280,7 @@
 "Standard Overnight","Standard Overnight"
 "Station","Station"
 "Subtotal","Subtotal"
+"Test (TEM)","Test (TEM)"
 "The field is applicable if the Smart Post method is selected.","The field is applicable if the Smart Post method is selected."
 "There is no items in this order","There is no items in this order"
 "The response is in wrong format.","The response is in wrong format."
@@ -306,9 +321,11 @@
 "UPS Worldwide Express PlusSM","UPS Worldwide Express PlusSM"
 "UPS Worldwide Saver","UPS Worldwide Saver"
 "User ID","User ID"
+"Use Test (TEM) environment for testing with the same credentials. Test labels will be watermarked and not processed for payment.","Use Test (TEM) environment for testing with the same credentials. Test labels will be watermarked and not processed for payment."
 "USPS","USPS"
 "USPS Ground Advantage","USPS Ground Advantage"
 "USPS GXG Envelopes","USPS GXG Envelopes"
+"USPS label generation requires complete payment account configuration. Please configure Account Type, Account Number, CRID, and MID in the admin settings.","USPS label generation requires complete payment account configuration. Please configure Account Type, Account Number, CRID, and MID in the admin settings."
 "Variable","Variable"
 "We can't convert a rate from ""%1-%2"".","We can't convert a rate from ""%1-%2""."
 "Weight Unit","Weight Unit"
@@ -323,4 +340,7 @@
 "Wrong Region.","Wrong Region."
 "Yes","Yes"
 "Your Packaging","Your Packaging"
+"Your USPS Customer Registration ID","Your USPS Customer Registration ID"
+"Your USPS Mailer ID","Your USPS Mailer ID"
+"Your USPS payment account number","Your USPS payment account number"
 "Zero shipping charge for '%s'","Zero shipping charge for '%s'"
