--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -63,6 +63,7 @@
 "Enable Negotiated Rates","Enable Negotiated Rates"
 "Enables/Disables SSL verification of Maho server by UPS.","Enables/Disables SSL verification of Maho server by UPS."
 "Enable SSL Verification","Enable SSL Verification"
+"Enable to receive discounted commercial rates instead of retail counter pricing. Recommended for online label printing.","Enable to receive discounted commercial rates instead of retail counter pricing. Recommended for online label printing."
 "EPS (Enterprise Payment System)","EPS (Enterprise Payment System)"
 "Error #%s : %s","Error #%s : %s"
 "Error reading response from UPS","Error reading response from UPS"
@@ -321,6 +322,7 @@
 "UPS Worldwide Express PlusSM","UPS Worldwide Express PlusSM"
 "UPS Worldwide Saver","UPS Worldwide Saver"
 "User ID","User ID"
+"Use Commercial Pricing","Use Commercial Pricing"
 "Use Test (TEM) environment for testing with the same credentials. Test labels will be watermarked and not processed for payment.","Use Test (TEM) environment for testing with the same credentials. Test labels will be watermarked and not processed for payment."
 "USPS","USPS"
 "USPS Ground Advantage","USPS Ground Advantage"
