--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -10,7 +10,6 @@
 "2nd Day Air Letter","2nd Day Air Letter"
 "3 Day Freight","3 Day Freight"
 "3 Day Select","3 Day Select"
-"5-digit ZIP code where permit was issued (required for PERMIT account type only)","5-digit ZIP code where permit was issued (required for PERMIT account type only)"
 "Access ID","Access ID"
 "Account ID","Account ID"
 "Account Number","Account Number"
@@ -37,8 +36,8 @@
 "Configuration","Configuration"
 "Container","Container"
 "Content Type","Content Type"
+"CRID (Customer Registration ID)","CRID (Customer Registration ID)"
 "Customer Packaging","Customer Packaging"
-"Customer Registration ID (CRID)","Customer Registration ID (CRID)"
 "Customer services","Customer services"
 "Customer Supplied Package","Customer Supplied Package"
 "Debug","Debug"
@@ -143,7 +142,6 @@
 "Library Mail Parcel","Library Mail Parcel"
 "Live","Live"
 "Machinable","Machinable"
-"Mailer ID (MID)","Mailer ID (MID)"
 "Maximum Package Weight (Please consult your shipping carrier for maximum supported shipping weight)","Maximum Package Weight (Please consult your shipping carrier for maximum supported shipping weight)"
 "Media Mail Parcel","Media Mail Parcel"
 "Medical express","Medical express"
@@ -151,6 +149,7 @@
 "Merchandise","Merchandise"
 "Meter Number","Meter Number"
 "Method toOptionArray not found in source model.","Method toOptionArray not found in source model."
+"MID (Mailer ID)","MID (Mailer ID)"
 "Minimum Order Amount for Free Shipping","Minimum Order Amount for Free Shipping"
 "Minimum Package Weight (Please consult your shipping carrier for minimum supported shipping weight)","Minimum Package Weight (Please consult your shipping carrier for minimum supported shipping weight)"
 "Mode","Mode"
@@ -163,12 +162,12 @@
 "Next Day Air Saver","Next Day Air Saver"
 "Next Day Air Saver Letter","Next Day Air Saver Letter"
 "No","No"
+"No label data received from USPS","No label data received from USPS"
 "Non-rectangular","Non-rectangular"
 "Non Documents","Non Documents"
 "Non documents","Non documents"
 "None","None"
 "No packages for request","No packages for request"
-"No rates available","No rates available"
 "Not Required","Not Required"
 "Order","Order"
 "Order #%s","Order #%s"
@@ -182,7 +181,8 @@
 "Pallet","Pallet"
 "Parcel","Parcel"
 "Password","Password"
-"Payment Account Settings","Payment Account Settings"
+"Payment account configuration is incomplete. Please configure Account Type, Account Number, CRID, and MID in System > Configuration > USPS.","Payment account configuration is incomplete. Please configure Account Type, Account Number, CRID, and MID in System > Configuration > USPS."
+"Payment Account Number","Payment Account Number"
 "Payment Account Type","Payment Account Type"
 "PERMIT","PERMIT"
 "Permit ZIP Code","Permit ZIP Code"
@@ -248,12 +248,14 @@
 "Priority Overnight","Priority Overnight"
 "Production","Production"
 "Rectangular","Rectangular"
-"Register your application at developers.usps.com to obtain OAuth credentials. Use the same credentials for both test and production environments.","Register your application at developers.usps.com to obtain OAuth credentials. Use the same credentials for both test and production environments."
+"Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Use the same credentials for both test and production environments.","Register your application at <a href=""https://developers.usps.com"" target=""_blank"">developers.usps.com</a> to obtain OAuth credentials. Use the same credentials for both test and production environments."
 "Regular","Regular"
 "Regular Pickup","Regular Pickup"
 "Request Courier","Request Courier"
 "Required","Required"
 "Required for negotiated rates; 6-character UPS.","Required for negotiated rates; 6-character UPS."
+"Required for shipping label generation. EPS (Enterprise Payment System) or PERMIT.","Required for shipping label generation. EPS (Enterprise Payment System) or PERMIT."
+"Required only for PERMIT account type.","Required only for PERMIT account type."
 "Residential","Residential"
 "Residential Delivery","Residential Delivery"
 "Response is in the wrong format","Response is in the wrong format"
@@ -262,10 +264,8 @@
 "Same day","Same day"
 "Sample","Sample"
 "Sandbox Mode","Sandbox Mode"
-"Secure Gateway URL","Secure Gateway URL"
 "Secureline","Secureline"
 "Sender","Sender"
-"Service type does not match","Service type does not match"
 "Shipper Number","Shipper Number"
 "Shipping Confirm REST URL","Shipping Confirm REST URL"
 "Ship to Applicable Countries","Ship to Applicable Countries"
@@ -290,7 +290,6 @@
 "Tracking REST URL","Tracking REST URL"
 "Unable to retrieve tracking","Unable to retrieve tracking"
 "United Parcel Service REST","United Parcel Service REST"
-"Unknown error","Unknown error"
 "UPS","UPS"
 "UPS Expedited","UPS Expedited"
 "UPS Express","UPS Express"
@@ -327,7 +326,6 @@
 "USPS","USPS"
 "USPS Ground Advantage","USPS Ground Advantage"
 "USPS GXG Envelopes","USPS GXG Envelopes"
-"USPS label generation requires complete payment account configuration. Please configure Account Type, Account Number, CRID, and MID in the admin settings.","USPS label generation requires complete payment account configuration. Please configure Account Type, Account Number, CRID, and MID in the admin settings."
 "Variable","Variable"
 "We can't convert a rate from ""%1-%2"".","We can't convert a rate from ""%1-%2""."
 "Weight Unit","Weight Unit"
@@ -341,8 +339,8 @@
 "Wrong Content Type.","Wrong Content Type."
 "Wrong Region.","Wrong Region."
 "Yes","Yes"
+"Your EPS or PERMIT account number for paying postage.","Your EPS or PERMIT account number for paying postage."
 "Your Packaging","Your Packaging"
-"Your USPS Customer Registration ID","Your USPS Customer Registration ID"
-"Your USPS Mailer ID","Your USPS Mailer ID"
-"Your USPS payment account number","Your USPS payment account number"
+"Your USPS Customer Registration ID for label generation.","Your USPS Customer Registration ID for label generation."
+"Your USPS Mailer ID for label generation.","Your USPS Mailer ID for label generation."
 "Zero shipping charge for '%s'","Zero shipping charge for '%s'"
