--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -1134,6 +1134,7 @@
 "View Full Size","View Full Size"
 "View Statistics For:","View Statistics For:"
 "Visibility:","Visibility:"
+"Visitors","Visitors"
 "Warning","Warning"
 "Warning! Empty value can cause problems with CSV format.","Warning! Empty value can cause problems with CSV format."
 "Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?","Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?"
