--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -1,3 +1,8 @@
+"Browsers","Browsers"
+"Devices","Devices"
+"Devices & Browsers (Last 7 Days)","Devices & Browsers (Last 7 Days)"
+"Direct","Direct"
+"Email","Email"
 "Enable Log","Enable Log"
 "Enable Log Cleaning","Enable Log Cleaning"
 "Error Email Recipient","Error Email Recipient"
@@ -6,6 +11,21 @@
 "Frequency","Frequency"
 "Log","Log"
 "Log cleanup Warnings","Log cleanup Warnings"
+"No data","No data"
+"No page view data available","No page view data available"
+"No traffic source data available","No traffic source data available"
+"online now","online now"
+"Page","Page"
+"Referral","Referral"
 "Save Log, Days","Save Log, Days"
+"Search Engines","Search Engines"
+"Social Media","Social Media"
 "Start Time","Start Time"
+"Top Pages (Last 7 Days)","Top Pages (Last 7 Days)"
+"Traffic Sources (Last 7 Days)","Traffic Sources (Last 7 Days)"
+"Views","Views"
+"Visitors","Visitors"
 "Visitors only","Visitors only"
+"Visitor Stats","Visitor Stats"
+"visits this week","visits this week"
+"visits today","visits today"
