--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -837,6 +837,7 @@
 "Run Profile","Run Profile"
 "Run Profile in Popup","Run Profile in Popup"
 "Sales","Sales"
+"Sales Overview","Sales Overview"
 "Sales Report","Sales Report"
 "Samples","Samples"
 "Save","Save"
