--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -1,5 +1,6 @@
 "Browsers","Browsers"
 "Devices","Devices"
+"Devices & Browsers","Devices & Browsers"
 "Devices & Browsers (Last 7 Days)","Devices & Browsers (Last 7 Days)"
 "Direct","Direct"
 "Email","Email"
@@ -21,11 +22,13 @@
 "Search Engines","Search Engines"
 "Social Media","Social Media"
 "Start Time","Start Time"
+"Top Pages","Top Pages"
 "Top Pages (Last 7 Days)","Top Pages (Last 7 Days)"
+"Traffic Sources","Traffic Sources"
 "Traffic Sources (Last 7 Days)","Traffic Sources (Last 7 Days)"
 "Views","Views"
 "Visitors","Visitors"
 "Visitors only","Visitors only"
 "Visitor Stats","Visitor Stats"
-"visits this week","visits this week"
-"visits today","visits today"
+"This week","This week"
+"Today","Today"
