--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -143,8 +143,8 @@
 "Authorized OAuth Tokens","Authorized OAuth Tokens"
 "Automatic (equalize price ranges)","Automatic (equalize price ranges)"
 "Automatic (equalize product counts)","Automatic (equalize product counts)"
+"Average","Average"
 "Average Order Amount","Average Order Amount"
-"Average Orders","Average Orders"
 "b","b"
 "Back","Back"
 "Backend Locale","Backend Locale"
@@ -503,6 +503,7 @@
 "Layered Navigation Indices","Layered Navigation Indices"
 "Layered Navigation Indices were refreshed.","Layered Navigation Indices were refreshed."
 "Leave empty to use tax identifier","Leave empty to use tax identifier"
+"Lifetime","Lifetime"
 "Lifetime Sales","Lifetime Sales"
 "Lifetime statistics have been updated.","Lifetime statistics have been updated."
 "Links","Links"
