--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -1,7 +1,6 @@
 "Browsers","Browsers"
 "Devices","Devices"
 "Devices & Browsers","Devices & Browsers"
-"Devices & Browsers (Last 7 Days)","Devices & Browsers (Last 7 Days)"
 "Direct","Direct"
 "Email","Email"
 "Enable Log","Enable Log"
@@ -15,20 +14,18 @@
 "No data","No data"
 "No page view data available","No page view data available"
 "No traffic source data available","No traffic source data available"
-"online now","online now"
+"Online","Online"
 "Page","Page"
 "Referral","Referral"
 "Save Log, Days","Save Log, Days"
 "Search Engines","Search Engines"
 "Social Media","Social Media"
 "Start Time","Start Time"
+"This week","This week"
+"Today","Today"
 "Top Pages","Top Pages"
-"Top Pages (Last 7 Days)","Top Pages (Last 7 Days)"
 "Traffic Sources","Traffic Sources"
-"Traffic Sources (Last 7 Days)","Traffic Sources (Last 7 Days)"
 "Views","Views"
 "Visitors","Visitors"
 "Visitors only","Visitors only"
 "Visitor Stats","Visitor Stats"
-"This week","This week"
-"Today","Today"
