--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -21,7 +21,6 @@
 "Search Engines","Search Engines"
 "Social Media","Social Media"
 "Start Time","Start Time"
-"This week","This week"
 "Today","Today"
 "Top Pages","Top Pages"
 "Traffic Sources","Traffic Sources"
@@ -29,3 +28,4 @@
 "Visitors","Visitors"
 "Visitors only","Visitors only"
 "Visitor Stats","Visitor Stats"
+"Week","Week"
