--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -1,8 +1,7 @@
 "Browsers","Browsers"
 "Devices","Devices"
 "Devices & Browsers","Devices & Browsers"
-"Direct","Direct"
-"Email","Email"
+"Direct / No referrer","Direct / No referrer"
 "Enable Log","Enable Log"
 "Enable Log Cleaning","Enable Log Cleaning"
 "Error Email Recipient","Error Email Recipient"
@@ -16,10 +15,7 @@
 "No traffic source data available","No traffic source data available"
 "Online","Online"
 "Page","Page"
-"Referral","Referral"
 "Save Log, Days","Save Log, Days"
-"Search Engines","Search Engines"
-"Social Media","Social Media"
 "Start Time","Start Time"
 "Today","Today"
 "Top Pages","Top Pages"
