--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -348,11 +348,13 @@
 "Enabled","Enabled"
 "Enable Password Authentication","Enable Password Authentication"
 "Enclose Values In:","Enclose Values In:"
+"Engagement","Engagement"
 "Enter current password and press ""Save Account"" to confirm passkey change.","Enter current password and press ""Save Account"" to confirm passkey change."
 "Enter new email address:","Enter new email address:"
 "Entity Attributes","Entity Attributes"
 "Entity Type","Entity Type"
 "Entity type:","Entity type:"
+"Entry & Exit Pages","Entry & Exit Pages"
 "Error","Error"
 "example: ""sitemap/"" or ""/"" for base path (path must be writeable)","example: ""sitemap/"" or ""/"" for base path (path must be writeable)"
 "example: sitemap.xml","example: sitemap.xml"
@@ -487,6 +489,7 @@
 "JavaScript/CSS Cache","JavaScript/CSS Cache"
 "JavaScript seems to be disabled in your browser.","JavaScript seems to be disabled in your browser."
 "Kb","Kb"
+"Languages","Languages"
 "Last 5 Orders","Last 5 Orders"
 "Last 5 Search Terms","Last 5 Search Terms"
 "Last 7 Days","Last 7 Days"
