--- a/app/locale/en_US/Mage_Log.csv
+++ b/app/locale/en_US/Mage_Log.csv
@@ -1,3 +1,6 @@
+"Average Duration","Average Duration"
+"Average Pages","Average Pages"
+"Bounce Rate","Bounce Rate"
 "Browsers","Browsers"
 "Devices","Devices"
 "Devices & Browsers","Devices & Browsers"
@@ -7,21 +10,33 @@
 "Error Email Recipient","Error Email Recipient"
 "Error Email Sender","Error Email Sender"
 "Error Email Template","Error Email Template"
+"Exit Pages","Exit Pages"
+"Exits","Exits"
 "Frequency","Frequency"
+"Landing Pages","Landing Pages"
 "Log","Log"
 "Log cleanup Warnings","Log cleanup Warnings"
+"Logged in","Logged in"
+"Login Conversion","Login Conversion"
+"New vs Returning","New vs Returning"
 "No data","No data"
+"No language data available","No language data available"
 "No page view data available","No page view data available"
 "No traffic source data available","No traffic source data available"
+"of visitors logged in","of visitors logged in"
 "Online","Online"
 "Page","Page"
+"Returning","Returning"
 "Save Log, Days","Save Log, Days"
+"Session Metrics","Session Metrics"
+"Sessions","Sessions"
 "Start Time","Start Time"
 "Today","Today"
 "Top Pages","Top Pages"
+"Total visitors","Total visitors"
 "Traffic Sources","Traffic Sources"
 "Views","Views"
 "Visitors","Visitors"
 "Visitors only","Visitors only"
-"Visitor Stats","Visitor Stats"
+"Visits","Visits"
 "Week","Week"
