Added more analytics to admin dashboard (#382)

--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -143,8 +143,8 @@
 "Authorized OAuth Tokens","Authorized OAuth Tokens"
 "Automatic (equalize price ranges)","Automatic (equalize price ranges)"
 "Automatic (equalize product counts)","Automatic (equalize product counts)"
+"Average","Average"
 "Average Order Amount","Average Order Amount"
-"Average Orders","Average Orders"
 "b","b"
 "Back","Back"
 "Backend Locale","Backend Locale"
@@ -348,11 +348,13 @@
 "Enabled","Enabled"
 "Enable Password Authentication","Enable Password Authentication"
 "Enclose Values In:","Enclose Values In:"
+"Engagement","Engagement"
 "Enter current password and press ""Save Account"" to confirm passkey change.","Enter current password and press ""Save Account"" to confirm passkey change."
 "Enter new email address:","Enter new email address:"
 "Entity Attributes","Entity Attributes"
 "Entity Type","Entity Type"
 "Entity type:","Entity type:"
+"Entry & Exit Pages","Entry & Exit Pages"
 "Error","Error"
 "example: ""sitemap/"" or ""/"" for base path (path must be writeable)","example: ""sitemap/"" or ""/"" for base path (path must be writeable)"
 "example: sitemap.xml","example: sitemap.xml"
@@ -487,6 +489,7 @@
 "JavaScript/CSS Cache","JavaScript/CSS Cache"
 "JavaScript seems to be disabled in your browser.","JavaScript seems to be disabled in your browser."
 "Kb","Kb"
+"Languages","Languages"
 "Last 5 Orders","Last 5 Orders"
 "Last 5 Search Terms","Last 5 Search Terms"
 "Last 7 Days","Last 7 Days"
@@ -503,6 +506,7 @@
 "Layered Navigation Indices","Layered Navigation Indices"
 "Layered Navigation Indices were refreshed.","Layered Navigation Indices were refreshed."
 "Leave empty to use tax identifier","Leave empty to use tax identifier"
+"Lifetime","Lifetime"
 "Lifetime Sales","Lifetime Sales"
 "Lifetime statistics have been updated.","Lifetime statistics have been updated."
 "Links","Links"
@@ -837,6 +841,7 @@
 "Run Profile","Run Profile"
 "Run Profile in Popup","Run Profile in Popup"
 "Sales","Sales"
+"Sales Overview","Sales Overview"
 "Sales Report","Sales Report"
 "Samples","Samples"
 "Save","Save"
@@ -1134,6 +1139,7 @@
 "View Full Size","View Full Size"
 "View Statistics For:","View Statistics For:"
 "Visibility:","Visibility:"
+"Visitors","Visitors"
 "Warning","Warning"
 "Warning! Empty value can cause problems with CSV format.","Warning! Empty value can cause problems with CSV format."
 "Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?","Warning!\r\nThis action will remove this user from already assigned role\r\nAre you sure?"
