--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -321,6 +321,7 @@
 "Invoice Update for Guest","Invoice Update for Guest"
 "Invoice void problem","Invoice void problem"
 "Invoice will be created without communication with payment gateway.","Invoice will be created without communication with payment gateway."
+"IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"". Credit Memo has not been created. Please create offline Credit Memo.","IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"". Credit Memo has not been created. Please create offline Credit Memo."
 "Is Closed","Is Closed"
 "Item","Item"
 "Item in your order","Item in your order"
@@ -818,7 +819,6 @@
 "Track Order","Track Order"
 "Track this shipment","Track this shipment"
 "Track your order","Track your order"
-"Transaction ""%s"" was already processed.","Transaction ""%s"" was already processed."
 "Transaction # %s | %s","Transaction # %s | %s"
 "Transaction ID","Transaction ID"
 "Transaction ID: ""%s"".","Transaction ID: ""%s""."
