--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -165,7 +165,6 @@
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information."
 "Gender","Gender"
 "Gender is required.","Gender is required."
-"General Subscription","General Subscription"
 "Generate Human-Friendly Customer ID","Generate Human-Friendly Customer ID"
 "Global","Global"
 "Group","Group"
@@ -480,10 +479,8 @@
 "Wrong email.","Wrong email."
 "Wrong transactional account email type","Wrong transactional account email type"
 "Year","Year"
-"You are currently not subscribed to any newsletter.","You are currently not subscribed to any newsletter."
-"You are currently not subscribed to our newsletter.","You are currently not subscribed to our newsletter."
-"You are currently subscribed to 'General Subscription'.","You are currently subscribed to 'General Subscription'."
 "You are currently subscribed to our newsletter.","You are currently subscribed to our newsletter."
+"You are not subscribed to our newsletter.","You are not subscribed to our newsletter."
 "You are now logged out","You are now logged out"
 "You have been successfully logged in.","You have been successfully logged in."
 "You have exceeded magic link requests per hour from this email address.","You have exceeded magic link requests per hour from this email address."
