Simplified newsletter subscription page in customer account (#398)

--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -137,7 +137,6 @@
 "Edit Customer Group ""%s""","Edit Customer Group ""%s"""
 "Edit Customer Groups","Edit Customer Groups"
 "Edit Group","Edit Group"
-"Edit Newsletters","Edit Newsletters"
 "Email","Email"
 "Email:","Email:"
 "Email Address","Email Address"
@@ -165,7 +164,6 @@
 "From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.","From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information."
 "Gender","Gender"
 "Gender is required.","Gender is required."
-"General Subscription","General Subscription"
 "Generate Human-Friendly Customer ID","Generate Human-Friendly Customer ID"
 "Global","Global"
 "Group","Group"
@@ -265,7 +263,6 @@
 "Newsletter Finish","Newsletter Finish"
 "Newsletter Information","Newsletter Information"
 "Newsletter Received","Newsletter Received"
-"Newsletters","Newsletters"
 "Newsletter Start","Newsletter Start"
 "Newsletter Subscription","Newsletter Subscription"
 "No customer collections found","No customer collections found"
@@ -480,10 +477,8 @@
 "Wrong email.","Wrong email."
 "Wrong transactional account email type","Wrong transactional account email type"
 "Year","Year"
-"You are currently not subscribed to any newsletter.","You are currently not subscribed to any newsletter."
-"You are currently not subscribed to our newsletter.","You are currently not subscribed to our newsletter."
-"You are currently subscribed to 'General Subscription'.","You are currently subscribed to 'General Subscription'."
 "You are currently subscribed to our newsletter.","You are currently subscribed to our newsletter."
+"You are not subscribed to our newsletter.","You are not subscribed to our newsletter."
 "You are now logged out","You are now logged out"
 "You have been successfully logged in.","You have been successfully logged in."
 "You have exceeded magic link requests per hour from this email address.","You have exceeded magic link requests per hour from this email address."
